--- a/EncourageWork/res/values/strings.xml
+++ b/EncourageWork/res/values/strings.xml
@@ -4,5 +4,9 @@
     <string name="app_name">EncourageWork</string>
     <string name="hello_world">Hello world!</string>
     <string name="menu_settings">Settings</string>
+    <string name="asmnt_name_field">Assignment Name</string>
+    <string name="due_date_tag">Due Date:</string>
+    <string name="check_complete">Complete</string>
+    <string name="notes_hint">Notes</string>
 
 </resources>
