--- a/EncourageWork/res/values/strings.xml
+++ b/EncourageWork/res/values/strings.xml
@@ -3,5 +3,7 @@
 
     <string name="app_name">EncourageWork</string>
     <string name="title_assignment_detail">Assignment Detail</string>
+    <string name="assignment_name_field">Assignment Name</string>
+    <string name="notes_hint">Notes</string>
 
 </resources>
