--- a/EncourageWork/res/values/strings.xml
+++ b/EncourageWork/res/values/strings.xml
@@ -5,5 +5,6 @@
     <string name="title_assignment_detail">Assignment Detail</string>
     <string name="assignment_name_field">Assignment Name</string>
     <string name="notes_hint">Notes</string>
+    <string name="add_title">Add</string>
 
 </resources>
